syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.zequent.framework.sdks.edge.proto";
option java_outer_classname = "EdgeSdkProto";
option go_package = "zequent/framework/gen/proto";


service EdgeAdapterService {
  // Capability Management
  rpc GetCapabilities(EdgeGetCapabilitiesRequest) returns (EdgeGetCapabilitiesResponse);

  // Flight Control (for drone in dock)
  rpc TakeOff(EdgeTakeOffRequest) returns (EdgeResponse);
  rpc GoTo(EdgeGoToRequest) returns (EdgeResponse);
  rpc ReturnToHome(EdgeReturnToHomeRequest) returns (EdgeResponse);

  // Manual Control
  rpc EnterManualControl(EdgeManualControlRequest) returns (EdgeResponse);
  rpc ExitManualControl(EdgeManualControlRequest) returns (EdgeResponse);
  rpc ManualControlInput(stream EdgeManualControlInputRequest) returns (EdgeResponse);

  // Gimbal & Camera Control
  rpc LookAt(EdgeLookAtRequest) returns (EdgeResponse);
  rpc EnableGimbalTracking(EdgeEnableGimbalTrackingRequest) returns (EdgeResponse);

  // Detection
  rpc GetDetections(EdgeGetDetectionsRequest) returns (stream EdgeDetectionResponse);

  // Dock Specific Operations
  rpc OpenCover(EdgeOpenCoverRequest) returns (EdgeResponse);
  rpc CloseCover(EdgeCloseCoverRequest) returns (EdgeResponse);
  rpc StartCharging(EdgeStartChargingRequest) returns (EdgeResponse);
  rpc StopCharging(EdgeStopChargingRequest) returns (EdgeResponse);

  // Asset Management
  rpc RebootAsset(EdgeRebootAssetRequest) returns (EdgeResponse);
  rpc BootUpSubAsset(EdgeBootSubAssetRequest) returns (EdgeResponse);
  rpc BootDownSubAsset(EdgeBootSubAssetRequest) returns (EdgeResponse);
  rpc RegisterAsset(EdgeRegisterAssetRequest) returns (EdgeResponse);
  rpc DeRegisterAsset(EdgeDeRegisterAssetRequest) returns (EdgeResponse);


  // Debug & Maintenance
  rpc EnterOrCloseRemoteDebugMode(EdgeRemoteDebugModeRequest) returns (EdgeResponse);
  rpc ChangeAcMode(EdgeChangeAcModeRequest) returns (EdgeResponse);

  // Live Stream
  rpc StartLiveStream(EdgeStartLiveStreamRequest) returns (EdgeResponse);
  rpc StopLiveStream(EdgeStopLiveStreamRequest) returns (EdgeResponse);
  rpc ChangeLens(EdgeChangeCameraLensRequest) returns (EdgeResponse);
  rpc ChangeZoom(EdgeChangeCameraZoomRequest) returns (EdgeResponse);

  rpc CapturePhoto(EdgeCapturePhotoRequest) returns (EdgeResponse);
  rpc StartRecording(EdgeStartRecordingRequest) returns (EdgeResponse);
  rpc StopRecording(EdgeStopRecordingRequest) returns (EdgeResponse);

  rpc StartTask(EdgeStartTaskRequest) returns(EdgeResponse);
  rpc StopTask(EdgeStopTaskRequest) returns(EdgeResponse);

  rpc PrepareTask(EdgePrepareTaskRequest) returns(EdgeResponse);
}

message EdgePrepareTaskRequest{
  RequestBase base = 1;
  string taskId = 2;
}

message EdgeStartTaskRequest{
  RequestBase base = 1;
  string taskId = 2;
}

message EdgeStopTaskRequest{
  RequestBase base = 1;
  string taskId = 2;
}


// ========== EDGE BASE MESSAGES ==========

message EdgeResponse {
  optional bool hasErrors = 1;
  string tid = 2;
  string sn = 3;
  optional string assetId = 4;
  optional string responseMessage = 5;
  google.protobuf.Timestamp timestamp = 6;
  oneof response {
    google.protobuf.Empty empty = 7;
    GlobalErrorMessage error = 8;
    CommandProgress progress = 9;
    LiveStreamStartResponse liveStreamStartResponse = 10;
  }
}

// ========== EDGE SPECIFIC REQUEST MESSAGES ==========
// Uses shared messages from common.proto wrapped with RequestBase

message EdgeTakeOffRequest {
  RequestBase base = 1;
  Coordinates request = 2;
}

message EdgeGoToRequest {
  RequestBase base = 1;
  Coordinates request = 2;
}

message EdgeReturnToHomeRequest {
  RequestBase base = 1;
  ReturnToHomeRequest request = 2;
}

message EdgeManualControlRequest {
  RequestBase base = 1;
  ManualControlRequest request = 2;
}

message EdgeManualControlInputRequest {
  RequestBase base = 1;
  ManualControlInput request = 2;
}

message EdgeLookAtRequest {
  RequestBase base = 1;
  Coordinates request = 2;
  optional string payloadIndex = 3;
  optional bool locked = 4;
}

message EdgeEnableGimbalTrackingRequest {
  RequestBase base = 1;
  bool enabled = 2;
}

message EdgeGetDetectionsRequest {
  RequestBase base = 1;
  optional string streamUrl = 2;
}

message EdgeDetectionResponse {
  RequestBase base = 1;
  repeated DetectionResult detections = 2;

  message DetectionResult {
    string objectId = 1;
    string objectType = 2;
    float confidence = 3;
    BoundingBox boundingBox = 4;

    message BoundingBox {
      float x = 1;
      float y = 2;
      float width = 3;
      float height = 4;
    }
  }
}

// ========== CAPABILITY MESSAGES ==========

message EdgeGetCapabilitiesRequest {
  string sn = 1;
  optional string assetId = 2;
}

message EdgeGetCapabilitiesResponse {
  CurrentCapabilities capabilities = 1;
  optional GlobalErrorMessage error = 2;
}

// ========== DOCK SPECIFIC MESSAGES ==========

message EdgeOpenCoverRequest {
  RequestBase base = 1;
}

message EdgeCloseCoverRequest {
  RequestBase base = 1;
  optional bool force = 2;  // For ForceCloseCover
}

message EdgeStartChargingRequest {
  RequestBase base = 1;
}

message EdgeStopChargingRequest {
  RequestBase base = 1;
}

message EdgeRebootAssetRequest {
  RequestBase base = 1;
}

message EdgeBootSubAssetRequest {
  RequestBase base = 1;
  bool bootUp = 2;  // true = boot up, false = boot down
}

message EdgeRemoteDebugModeRequest {
  RequestBase base = 1;
  bool enabled = 2;  // true = enter, false = close
}

message EdgeChangeAcModeRequest {
  RequestBase base = 1;
  AssetAirConditionerStateEnum mode = 2;
}

// ========== CAMERA SPECIFIC MESSAGES ==========

message EdgeChangeCameraLensRequest {
  RequestBase base = 1;
  ChangeCameraLensRequest request = 2;
}

message EdgeChangeCameraZoomRequest {
  RequestBase base = 1;
  ChangeCameraZoomRequest request = 2;
}

message EdgeCapturePhotoRequest {
  RequestBase base = 1;
}

message EdgeStartRecordingRequest {
  RequestBase base = 1;
}

message EdgeStopRecordingRequest {
  RequestBase base = 1;
}

// ========== LIVE STREAM MESSAGES ==========

message EdgeStartLiveStreamRequest {
  RequestBase base = 1;
  EdgeLiveStreamStartRequest request = 2;
}

message EdgeLiveStreamStartRequest{
  string videoId = 1;
  string streamServer = 2;
  LiveStreamTypeEnum streamType = 3;
  AssetTypeEnum assetType = 4;
}

message EdgeStopLiveStreamRequest {
  RequestBase base = 1;
  EdgeLiveStreamStopRequest request = 2;
}

message EdgeLiveStreamStopRequest{
  string videoId = 1;
}


message EdgeRegisterAssetRequest{
  RequestBase base = 1;
  AssetProtoDTO assetDTO = 2;

}

message EdgeDeRegisterAssetRequest{
  RequestBase base = 1;
}

